# prrte

./: .gitignore  README.md  VERSION  configure.ac
.github/workflows/: builds.yaml  fork_sync_v3.0.yaml  fork_sync_v41x.yaml
config/: prte_config_files.m4  prte_configure_options.m4  prte_get_version.m4  prte_get_version.sh
docs/: Makefile.am  index.rst
docs/man/man1/: ompi-prte_info.1.rst  ompi-prted.1.rst
src/: Makefile.am
src/docs/show-help-files/: help-prte-hwloc-base.rst
src/hwloc/: hwloc.c
src/mca/ess/base/: ess_base_std_prted.c
src/mca/ess/hnp/: ess_hnp_module.c
src/mca/grpcomm/direct/: Makefile.am
src/mca/odls/base/: odls_base_default_fns.c
src/mca/odls/default/: Makefile.am
src/mca/oob/tcp/: Makefile.am
src/mca/plm/base/: plm_base_launch_support.c
src/mca/plm/ssh/: Makefile.am  plm_ssh_module.c
src/mca/plm/tm/: Makefile.am
src/mca/prteinstalldirs/runtime/: Makefile.am  configure.m4  prte_installdirs_runtime.c
src/mca/ras/slurm/: Makefile.am
src/mca/rmaps/: rmaps_types.h
src/mca/rmaps/base/: rmaps_base_binding.c  rmaps_base_map_job.c
src/prted/pmix/: Makefile.am  pmix_server_gen.c  pmix_server_queries.c
src/rml/: Makefile.am
src/rml/relm/: Makefile.am
src/rml/relm/base/: Makefile.am
src/runtime/: Makefile.am  prte_init.c  prte_launcher.c  prte_mca_params.c
src/tools/: Makefile.am
src/tools/prte/: prte.c
src/tools/prte_info/: Makefile.am
src/tools/prted/: Makefile.am
src/tools/prun/: Makefile.am
src/tools/pterm/: Makefile.am
src/util/: attr.c
src/util/hostfile/: Makefile.am
(+11 files in other folders)
