#
# Copyright (c) 2026      Sandia National Laboratories  All rights reserved.
# Copyright (c) 2026      Triad National Security, LLC.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
      rml/relm/base/base.h \
      rml/relm/base/state_machine.h

lib@PRTE_BINARY_PREFIX@prrte_la_SOURCES += \
      rml/relm/base/base.c \
      rml/relm/base/state_updates.c \
      rml/relm/base/link_updates.c
